Markup, CSS correction. Bootstrap and Prism integration. First two problems solved.

--- a/2018-frontend-pikabu.html
+++ b/2018-frontend-pikabu.html
@@ -4,19 +4,71 @@
       <title>Задания для Frontend разработчика Пикабу 2018</title>
       <meta charset="utf-8">
       <meta http-equiv="x-ua-compatible" content="ie=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-   <body>
-      <section>
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	  <link rel="stylesheet" href="css/main.css">
+	  <!-- Bootstrap CSS -->
+	  <link rel="stylesheet" href="css/bootstrap.min.css">
+	  <!-- Prism -->
+	  <link rel="stylesheet" href="css/prism.css">
+	  <script src="js/prism.min.js"></script>
+	</head>
+	<body>
+	<script>
+		(function () {
+
+			if (
+				(typeof self === 'undefined' || !self.Prism) &&
+				(typeof global === 'undefined' || !global.Prism)
+			) {
+				return;
+			}
+
+			var options = {};
+			Prism.plugins.customClass = {
+				map: function map(cm) {
+					options.classMap = cm;
+				},
+				prefix: function prefix(string) {
+					options.prefixString = string;
+				}
+			}
+
+			Prism.hooks.add('wrap', function (env) {
+				if (!options.classMap && !options.prefixString) {
+					return;
+				}
+				env.classes = env.classes.map(function (c) {
+					return (options.prefixString || '') + (options.classMap[c] || c);
+				});
+			});
+
+		})();
+		Prism.plugins.customClass.map({
+			keyword: 'keyword',
+			string: 'string',
+			comment: 'comment'
+		});
+		Prism.plugins.customClass.prefix('prism--');
+	</script>
+		<header class="container">
+			<h1>Задания для Frontend разработчика Пикабу 2018</h1>
+			<p>Оригинал: <a href="https://pikabu.ru/page/interview/frontend/">https://pikabu.ru/page/interview/frontend/</a></p>
+			<blockquote>Вам необходимо знать JS, HTML5, CSS и обязательно добрую старую библиотеку jQuery ;) Хотя бы немножко знать о LESS, SASS, ECMAScript 6, Node.js, Gulp, Webpack, Underscore, JSDoc, VCS. Желать пользователям добра и лучшего UX.</blockquote>
+			<hr>
+		</header>
+		
+      <main class="container">
          <div id="survey">
-		<h1>Задания для Frontend разработчика Пикабу 2018</h1>
-		<p>Оригинал <a href="https://pikabu.ru/page/interview/frontend/">https://pikabu.ru/page/interview/frontend/</a></p>
-            <blockquote>Вам необходимо знать JS, HTML5, CSS и обязательно добрую старую библиотеку jQuery ;) Хотя бы немножко знать о LESS, SASS, ECMAScript 6, Node.js, Gulp, Webpack, Underscore, JSDoc, VCS. Желать пользователям добра и лучшего UX.</blockquote>
             <p>
-               Дан фрагмент HTML. Используя только нативный JavaScript исправьте текст, следующий после тега <code>&lt;span&gt;</code> так, чтобы элемент <code>&lt;span&gt;</code> остался незатронутым
+               <b>1.</b> Дан фрагмент HTML. Используя только нативный JavaScript исправьте текст, следующий после тега <code>&lt;span&gt;</code> так, чтобы элемент <code>&lt;span&gt;</code> остался незатронутым
             </p>
             <pre class="language-html"><code>&lt;div class=&quot;example&quot;&gt;Дважды &lt;span&gt;два&lt;/span&gt; - пять&lt;/div&gt;</code></pre>
-            <p>
-               <b>15.</b> Предположим в наследство Вам достался следующий код. Максимально упростите его с использованием библиотеки jQuery
+            <p><b>Ответ:</b></p>
+			<pre class="language-js answer"><code>var elem = document.getElementsByClassName('example')[0]
+elem.lastChild.nodeValue = ' - четыре'</code></pre>
+			
+			<p>
+               <b>2.</b> Предположим в наследство Вам достался следующий код. Максимально упростите его с использованием библиотеки jQuery
             </p>
             <pre class="language-js"&gt;<code>document.getElementById('x1')
             .getElementsByTagName('div')[4]
@@ -25,7 +77,15 @@
             .querySelect('*[id="f"]')
             .textContent = 'Hello!';</code></pre>
             <p>
-               <b>16.</b> Используя регулярные выражения (RegExp) проверьте на валидность введенный пользователем URL (пусть это будет переменная <code>url</code>) по следующим критериям:
+			<p><b>Ответ:</b></p>
+			<pre class="language-js answer"><code>//childNodes[2] и children(':eq(2)') будут работать одинаково если в html разметке не было лишних символов между тегами
+
+$('#x1 > div').eq(4)
+			  .parent('div#x1').children(':eq(2)')
+			  .children(':first-child')
+			  .find('#f').text('Hello!');</code></pre>
+			
+               <b>3.</b> Используя регулярные выражения (RegExp) проверьте на валидность введенный пользователем URL (пусть это будет переменная <code>url</code>) по следующим критериям:
             </p>
             <ul>
                <li>разрешенные протоколы: http, https, а также ftp;</li>
@@ -39,7 +99,7 @@
                Пример URL валидный по заданным критериям: <code>https://c52.pikabu.lh:8080</code>
             </p>
             <p>
-               <b>17.</b> Предложите стили (LESS или SASS) для списка ниже, чтобы привести его к виду, как показано на скриншоте:
+               <b>4.</b> Предложите стили (LESS или SASS) для списка ниже, чтобы привести его к виду, как показано на скриншоте:
             </p>
             <pre class="language-html"><code>&lt;div class=&quot;example&quot;&gt;
     &lt;ul&gt;
@@ -58,12 +118,12 @@
         &lt;/li&gt;
     &lt;/ul&gt;
 &lt;/div&gt;</code></pre>
-            <img src="https://cs10.pikabu.ru/images/previews_comm/2018-04_3/1523562799194851279.png" alt=""><br>
+            <img src="img/1523562799194851279.png" alt=""><br>
             <p>
-               <b>18.</b> Имеется строка <code>str</code> с произвольным текстом. Необходимо без использования циклов (for, while, do) и объявления дополнительных переменных, посчитать количество символов в строке, у которых ASCII код кратный 3. Напишите по возможности наиболее компактный код.
+               <b>5.</b> Имеется строка <code>str</code> с произвольным текстом. Необходимо без использования циклов (for, while, do) и объявления дополнительных переменных, посчитать количество символов в строке, у которых ASCII код кратный 3. Напишите по возможности наиболее компактный код.
             </p>
             <p>
-               <b>19.</b> Дан массив целых чисел <code>input</code>. Необходимо написать функцию, которая преобразует массив <code>input</code> так, чтобы он удовлетворял следующим условиям:
+               <b>6.</b> Дан массив целых чисел <code>input</code>. Необходимо написать функцию, которая преобразует массив <code>input</code> так, чтобы он удовлетворял следующим условиям:
             </p>
             <ul>
                <li>вначале числа кратные двум, от наибольшего к наименьшему;</li>
@@ -72,7 +132,7 @@
             <pre class="language-js"><code>let input = [-2, 2, 4, 6, 8, 10, 3, 5, 7, 9, -1, -11];
 func(input); // [ 10, 8, 6, 4, 2, -2, -11, -1, 3, 5, 7, 9 ]</code></pre>
             <p>
-               <b>20.</b> Предложите вариант базового класса для успешной работы следующего кода
+               <b>7.</b> Предложите вариант базового класса для успешной работы следующего кода
             </p>
             <pre class="language-js"><code>class BaseClass {
     // ... ваш код
@@ -88,7 +148,7 @@ let m = new MyClass();
 m.result(10, 20) === 90;
 m.result(20, 10) === 110;</code></pre>
             <p>
-               <b>21.</b> Предложите, на ваш взгляд, наилучший вариант селектора к элементу ниже, для отображения текста чёрным цветом, учитывая, что ваш селектор расположен в самом начале следующих стилей
+               <b>8.</b> Предложите, на ваш взгляд, наилучший вариант селектора к элементу ниже, для отображения текста чёрным цветом, учитывая, что ваш селектор расположен в самом начале следующих стилей
             </p>
             <pre class="language-html"><code>&lt;section class=&quot;section&quot; id=&quot;section&quot;&gt;Зелёный текст&lt;/section&gt;</code></pre>
             <pre class="language-css"><code>// &lt;-- Ваш селектор
@@ -101,7 +161,7 @@ section#section {color: yellow}
 section#section.section {color: pink}
 section.section {color: red}</code></pre>
             <p>
-               <b>22.</b> Предположим вам по наследству достался код с обильной избыточностью. <u>Максимально</u> упростите код (сократите или удалите ненужные операции), сохранив его логику.
+               <b>9.</b> Предположим вам по наследству достался код с обильной избыточностью. <u>Максимально</u> упростите код (сократите или удалите ненужные операции), сохранив его логику.
             </p>
             <pre class="language-js">
 			<code>const f = (x) =&gt; {
@@ -120,6 +180,6 @@ section.section {color: red}</code></pre>
 	}
 };</code></pre>
          </div>
-      </section>
+      </main>
    </body>
 </html>
