Better animation, js comments, new class names, markup fix

--- a/bubble/index.html
+++ b/bubble/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/main.js"></script>
+    <link href="css/normalize.css" rel="stylesheet" media="all" />
     <link href="css/global_main.css" rel="stylesheet" media="all" />
     <title>Визуализация пузырьковой сортировки</title>
   </head>
@@ -13,13 +14,22 @@
   </header>
   <main>
     <section class="interface">
-      <div class="input"></div>
-      <button id="show_set">Новые данные</button>
+      <button id="show_nums">Новые данные</button>
       <div class="text nums-input"></div>
-      <button id="sort_set">Сотрировать</button>
+      <button id="sort_nums"></button>
       <div class="text nums-output"></div>
+      <h2 class="header-done">Данные отсортированы!</h2>
     </section>
     <section class="visual-wrapper"></section>
+    <section class="info">
+      <div class="text comparisons"></div>
+      <div class="instructions-link">
+        <span>Инструкция</a>
+        <div class="instructions-text">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
     <span>© 2018</span>
