--- a/bubble/index.html
+++ b/bubble/index.html
@@ -6,6 +6,7 @@
     <script src="js/main.js"></script>
     <link href="css/normalize.css" rel="stylesheet" media="all" />
     <link href="css/global_main.css" rel="stylesheet" media="all" />
+    <meta name="viewport" content="width=device-width; initial-scale=1.0">
     <title>Визуализация пузырьковой сортировки</title>
   </head>
   <body>
