--- a/bubble/index.html
+++ b/bubble/index.html
@@ -45,7 +45,7 @@
     </section>
   </main>
   <footer>
-    <span>© 2018</span>
+    © 2018 <a href="/" class="home-link">Home</a>
   </footer>
   </body>
 </html>
